update project tracker 2

--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -19,6 +19,7 @@ Updated: Dec 21 by KH
 - grammar edits (KH)
   - multilevel or multi-level
   - MDES as plural or singular
+- discussion of Benjamini-Hochberg
   
 # Package updates
 
@@ -47,13 +48,14 @@ Updated: Dec 21 by KH
   
 # Waiting
 
-- merge change from design to d_m
+- merge change from design to d_m, new MTP names
 
 # Stretch goals
 
 - surface WY functions to user with good documentation (KH)
 - tool that helps user build a block matrix of correlations based on a list of correlations between outcomes (KH)
 - add monte carlo error bars (LM)
+- generate a data frame of reasonable defaults for shiny that produce 80% power
 - additional designs: d2.2_m2rr, d3.3_2mff, d3.1_m3fc2rr, d2.2_m2cc with cluster robust standard errors
 - effect size calculator
 - speed up everything
