--- a/user_test/user_test_solution.Rmd
+++ b/user_test/user_test_solution.Rmd
@@ -32,20 +32,25 @@ You also have a few other pieces of information:
 
 # Using PUMP
 
-0. First, install the package.  
-
-Download the tar file, then use devtools to install.
-
-```{r}
-install.packages('devtools')
-devtools::install_local(path = '~/Desktop/PUMP_0.1.0.tgz')
-library(PUMP)
-```
-
 1. Determine the individual power for each outcome of the current study. Choose reasonable values of parameters given the information given.
 
 ```{r}
-
+library(pum)
+p <- pump_power(
+  design = 'd3.3_m3rc2rc',
+  MTP = 'Holm',
+  MDES = 0.25,
+  M = 4,
+  K = 6,
+  J = 4,
+  nbar = 500,
+  Tbar = 0.5,
+  ICC.2 = 0.1, ICC.3 = 0.4,
+  numCovar.1 = 4, numCovar.2 = 2, numCovar.3 = 0,
+  R2.1 = 0.6, R2.2 = 0.2, R2.3 = 0,
+  rho = 0.6
+)
+print(p)
 ```
 
 2. What is the 1-minimal power?
@@ -53,29 +58,92 @@ library(PUMP)
 3. What happens to individual power if you change your design to randomize at the school level instead? (Note: you will have to pick a model, choose what you want!)
 
 ```{r}
-
+p <- pump_power(
+  design = 'd3.2_m3ff2rc',
+  MTP = 'Holm',
+  MDES = 0.25,
+  M = 4,
+  K = 6,
+  J = 4,
+  nbar = 500,
+  Tbar = 0.5,
+  ICC.2 = 0.1, ICC.3 = 0.4,
+  numCovar.1 = 4, numCovar.2 = 2, numCovar.3 = 0,
+  R2.1 = 0.6, R2.2 = 0.2, R2.3 = 0,
+  rho = 0.6
+)
+print(p)
 ```
 
 4. Going back to the original design, determine the minimum detectable effect size of the study at your current target power for $1$-minimal power.
 
 ```{r}
-
+m <- pump_mdes(
+  design = 'd3.3_m3rc2rc',
+  target.power = 0.038,
+  power.definition = 'min1',
+  MTP = 'Holm',
+  alpha = 0.05,
+  M = 4,
+  K = 6,
+  J = 4,
+  nbar = 500,
+  Tbar = 0.5,
+  ICC.2 = 0.1, ICC.3 = 0.4,
+  numCovar.1 = 4, numCovar.2 = 2, numCovar.3 = 0,
+  R2.1 = 0.6, R2.2 = 0.2, R2.3 = 0,
+  rho = 0.6
+)
+print(m)
 ```
 5.  Determine the number of school districts you would need with your original MDES to achieve 80\% individual power.
 
 ```{r}
-
+s <- pump_sample(
+  design = 'd3.3_m3rc2rc',
+  target.power = 0.8,
+  power.definition = 'D1indiv',
+  typesample = 'K',
+  MTP = 'Holm',
+  alpha = 0.05,
+  MDES = 0.25,
+  M = 4,
+  J = 4,
+  nbar = 500,
+  Tbar = 0.5,
+  ICC.2 = 0.1, ICC.3 = 0.4,
+  numCovar.1 = 4, numCovar.2 = 2, numCovar.3 = 0,
+  R2.1 = 0.6, R2.2 = 0.2, R2.3 = 0,
+  rho = 0.6
+)
+print(s)
 ```
 
 6. Returning to all the original parameters, see how your power would change if you increase the correlation between outcomes, but keep everything else fixed.
 
 
 ```{r}
-
+p2 <- update(p, rho = 0.8)
+print(p2)
 ```
 
 7. Check how your power would vary over a range of values for the intraclass correlation at level 3.
 
 ```{r}
-
+g <- pump_power_grid(
+  design = 'd3.3_m3rc2rc',
+  MTP = 'Holm',
+  MDES = 0.25,
+  M = 4,
+  K = 6,
+  J = 4,
+  nbar = 500,
+  Tbar = 0.5,
+  alpha = 0.05,
+  ICC.2 = 0.2, ICC.3 = seq(0, 0.8, 0.1),
+  numCovar.1 = 4, numCovar.2 = 2, numCovar.3 = 0,
+  R2.1 = 0.6, R2.2 = 0.2, R2.3 = 0,
+  rho = 0.6
+)
+print(g)
 ```
