--- a/manuscript/PUMP_Manuscript.Rmd
+++ b/manuscript/PUMP_Manuscript.Rmd
@@ -1,9 +1,12 @@
 ---
 title: "PUMP manuscript draft"
 output:
-  pdf_document: default
+  pdf_document:
+    includes:
+      keep_tex: yes
+    number_sections: yes
+    toc_depth: 2
 bibliography: refs.bib
-geometry: "left=3cm,right=3cm,top=2cm,bottom=2cm"
 header-includes:
     - \usepackage{setspace}\doublespacing
 ---
@@ -28,7 +31,14 @@ theme_set( theme_minimal() )
 set.seed( 1010203 )
 ```
 
-# 1. Introduction
+\section{TODO}
+
+- fix tables
+- add abstract
+- add title
+
+\section{Introduction}
+\label{sec:intro}
 
 The PUMP R package fills an important gap in open source software and tools needed by researchers to design multi-level randomized controlled trials (RCTs) with sufficient statistical power.
 With this package, researchers can estimate statistical power, minimum detectable effect size (MDES), and needed sample size for multi-level experimental designs, in which units are nested within hierarchical structures such as students nested within schools nested with school districts.
@@ -77,7 +87,7 @@ These additional functions include:
 
 The PUMP package covers a range of multi-level designs that researchers typically use in practice, in which research units are nested in hierarchical groups.
 These designs are common in education research, for example, in which students are nested within schools, which can be then nested within school districts.
-Our power calculations assume the user will be analyzing these RCTs using frequentist mixed-effects regression models, containing a combination of fixed or random intercepts and treatment impacts at different levels, as we explain in detail in section TODO and in Appendix X. 
+Our power calculations assume the user will be analyzing these RCTs using frequentist mixed-effects regression models, containing a combination of fixed or random intercepts and treatment impacts at different levels, as we explain in detail in Section~\ref{sec:est_power} and in the Supplementary Materials. 
 
 The remainder of this paper is organized as follows: In Section 2, we provide a summary of the multiple testing problem. To do so, we begin with a motivating example from education research, which we refer to throughout the paper.
 We note, however, that the problem of power estimation for multi-level RCTs is not exclusive to the educational setting.
@@ -87,12 +97,12 @@ This section includes a summary of the RCT designs our methods cover, a discussi
 Section 4 provides a detailed presentation of the PUMP package with multiple examples of using the packages functions to conduct calculations for our education RCT example.
 Section 5 is a brief conclusion. 
 
-# 2. The Multiple Testing Problem
-
-## Diplomas Now
+\section{Diplomas Now}
+\label{sec:diplomas}
 
 We illustrate our package with a published RCT evaluation of a secondary school model called Diplomas Now.
-The Diplomas Now model is designed to increase high school graduation rates and post-secondary readiness. valuators evaluated whether the program was effective by conducting a RCT comparing schools who implemented the model to versus business as usual.
+The Diplomas Now model is designed to increase high school graduation rates and post-secondary readiness.
+Evaluators evaluated whether the program was effective by conducting a RCT comparing schools who implemented the model to versus business as usual.
 We refer to this example to illustrate key concepts and to illustrate the application of the PUMP package.
 
 The Diplomas Now model, created by three national organizations, Talent Development, City Year, and Communities In Schools, targets underfunded urban middle and high schools with many students who are not performing well academically.
@@ -123,7 +133,8 @@ We do not provide recommendations for which guidelines to follow when investigat
 Rather, we address the fact that researchers across many domains are increasingly applying MTPs and therefore need estimate power, MDES and sample size requirements.
 For illustration purposes, we focus on an alternative approach in the Diplomas Now study on assessing impacts of all 12 outcomes and applying MTPs to protect against the potential for spurious findings. 
 
-# Overview of Multiple Testing 
+\section{Overview of multiple testing}
+\label{sec:mtp_overview}
 
 Our motivating example illustrates that researchers are often interested in testing the effectiveness of an intervention on multiple outcomes.
 The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects.\footnote{Testing the effectiveness of an intervention for multiple subgroups, at multiple points in time, or across multiple treatment groups also results in a multiplicity of statistical hypotheses and can also lead to spurious findings of effects, but this is beyond the scope of this paper.}
@@ -160,7 +171,8 @@ In practice, however, the multiple outcomes are usually at least somewhat correl
 Nonetheless, any error inflation can still make it problematic to draw reliable conclusions about the existence of effects.
 
 
-# Using MTPs to protect against spurious impact findings
+\subsection{Using MTPs to protect against spurious impact findings}
+\label{sec:mtp_use}
 
 As introduced above, to counteract the multiple testing problem, multiple testing procedures (MTPs) adjust $p$-values.\footnote{Alternatively, MTPs can decrease the critical values for rejecting hypothesis tests. For ease of presentation, this paper focuses only on the approach of increasing $p$-values.}
 We next describe how using a MTP protects against false positives.
@@ -197,6 +209,11 @@ In Table 1, A, B, C and D are four possible scenarios: the numbers of true or fa
 $M_0$ and $M_1$ are the unobservable numbers of true null and false null hypotheses.
 $R$ is the number of null hypotheses that were rejected, and $M - R$ is the number of null hypotheses that were not rejected.
 
+
+Table 1: Numbers of hypothesis types and decisions.
+
+TODO insert table.
+
 In Table 1, $F$ is the number of erroneously rejected null hypotheses, or the number of false positive findings.
 Therefore, the FWER is equivalent to $Pr(F > 0)$, the probability of at least one false positive finding.
 Recall that Type I error is inflated when testing for effects on independent outcomes when no MTPs are applied.
@@ -220,7 +237,8 @@ In order for these procedures to provide strong control of the FWER, they requir
 The distribution of the unadjusted test statistics or $p$-values is said to have subset pivotality if for any subset of null hypotheses, the joint distribution of the test statistics or of the $p-$values for the subset is identical to the distribution under the complete null.
 A consequence of this assumption is that the resampling of test statistics or $p$-values can be done under the complete null hypothesis rather than under the unknown partial hypothesis (RN33093).}
 
-### Single-step vs. stepwise procedures
+\subsubsection{Single-step vs. stepwise procedures}
+\label{sec:stepwise}
 
 A second feature of an MTP that affects its statistical power is whether it is “single-step” or
 “stepwise” procedure.
@@ -271,7 +289,9 @@ The downside of an intersection-union test is that it is conservative: the FWER 
 For example, if we have two independent tests with type I error $\alpha$, then if both of the nulls are true, the probability of a type I error is $\alpha^2$ [@Deng2008].
 
 
-### Correlation between test statistics
+\subsubsection{Correlation between test statistics}
+\label{sec:corr}
+
 Finally, a third feature of an MTP that affects its statistical power is whether or not it takes into account the correlation of test statistics.
 The Bonferroni and Holm procedures strongly control
 the FWER in call cases, even when the multiple tests’ statistics are correlated, but they adjust $p$-values more than is necessary in that case.
@@ -305,6 +325,7 @@ For a more detailed explanation of each MTP, see Appendix A of @Porter2018.
 The following table summarizes the important features for each of the MTPs supported by PUMP: 
 
 
+Table 2: Summary of MTP procedures.
 Procedure                           | Control     | Single-step or stepwise | Accounts for correlation  |
 -----                               | ----------  | ----------------------- | ------------------------- |
 Bonferroni (BF)                     | FWER        |  single-step            | No                        |
@@ -313,9 +334,11 @@ Westfall-Young Single-step (WY-SS)  | FWER        |  single-step            | Ye
 Westfall-Young Step-down (WY-SD)    | FWER        |  stepwise               | Yes                       |
 Benjamini-Hochberg (BH)             | FDR         |  stepwise               | No                        |
 
-# 3 Estimating power, MDES and sample size in studies with multiple outcomes
+\section{Estimating power, MDES and sample size in studies with multiple outcomes}
+\label{sec:est}
 
-## Power estimation strategy
+\subsection{Power estimation strategy}
+\label{sec:est_power}
 
 We take an innovative simulation-based approach to estimating power for multiple outcomes, as introduced in @Porter2018. 
 We then build on this approach to estimating MDES and sample size.
@@ -338,8 +361,8 @@ We define $\psi_m$ to be the treatment effect for outcome $m$, with $M$ total ou
 If we have $M = 5$ outcomes, as in the Diplomas Now study, one possible joint alternative hypothesis is that all outcomes have effects: $H_A: \psi_1 > 0.125, \psi_2 > 0.2, \psi_3 > 0.1, \psi_4 > 0.1, \psi_5 > 0.05$.
 Another possible joint alternative hypothesis is one where only the first two outcomes have nonzero effects: $H_A: \psi_1 > 0.125, \psi_2 > 0.2,, \psi_3 = \psi_4 = \psi_5 = 0$.
 Once our joint alternative hypothesis is specified, we would generate simulated data under this hypothesis.
-To simulate data, we need to specify the full set of parameters as mentioned in section TODO that allow for data generation.
-See Appendix TODO for more details.
+To simulate data, we need to specify the full set of parameters as mentioned in Section~\ref{sec:params} that allow for data generation.
+See the Supplementary Details for more details about the assumed data-generating process.
 For example, for the Diplomas Now experiment, we would assume a specific data generating process to allow us to simulate synthetic students, schools, and districts, including covariates, outcomes, and treatment assignment.
 This process would involve specifying parameter values such as $R^2$, the amount of outcome variation explained by covariates at a particular level, and translating these parameter choices into data-generating parameters, such as the coefficient values for covariates in a linear model.
 
@@ -446,9 +469,8 @@ Westfall-Young procedures are computationally intensive, so the approach of skip
 This approach substantially reduces computational time by drawing test statistics directly rather than resampling data.
 
 
-
-
-## Designs and Models
+\subsection{Designs and models}
+\label{sec:d_m}
 
 When planning a study, the researcher first has to identify the design of the experiment, including the number of levels, and the level at which randomization occurs.
 These decisions can be a mix of the realities of the context (e.g., the treatment must be applied at the school level, and students are naturally nested in schools, making for a cluster randomization), or deliberate (e.g., the researcher groups similar schools to block their experiment in an attempt to improve power).
@@ -487,7 +509,10 @@ For more details about each combination, see the appendix.
 info <- pump_info()
 kable(info$Design[,1:4])
 ```
-## Overview of function parameters
+
+
+\subsubsection{Overview of function parameters}
+\label{sec:params}
 
 The table below shows the parameters that influence $Q_m$ formulae for different designs.
 
@@ -506,14 +531,16 @@ The ICC is for the unconditional model, and therefore includes the variation due
 
 - The $R^2$ expressions are the percent of variation at a particular level predicted by covariates specific to that level. For simplicity we assume covariates at a level are group mean centered, so only covariates at a particular level explain variance at that level.
 
+For precise formulae of these expressions, see the Supplementary materials, which outlines the assumed data-generating process, and the resulting expressions for $\text{ICC}$, $\omega$, and $R^2$.
+
 In addition to design parameters, there are additional parameters that control the precision of the power estimates themselves:
 
 - $tnum$ is the number of test statistics generated in order to estimate power. A larger number of test statistics results in greater computation time, but also a more precise estimate of power.  (Note that the `pump_mdes()` and `pump_sample()` have multiple `tnum` parameters controlling the precision of the search).
 - $B$ is the number of Westfall-Young permutations. Again, there is a tradeoff between precision and computation time.
 
-TODO: add references to specific appendix sections for formulas
 
-## Determining MDES and sample size
+\subsection{Determining MDES and sample size}
+\label{sec:est_mdes_ss}
 
 Frequently, a researcher's main concern with power is prospectively calculating either the MDES for each outcome in a given study, or determining the necessary sample size to achieve a target power given a specified set of MDES values.
 For our example based on Diplomas Now, we might be interested in calculating the MDES values of the outcomes in the current study, or determining how much we would want to alter the size of our sample of schools and districts given different power agendas.
@@ -546,22 +573,22 @@ If a test point achieves the target power to within tolerance, we conduct an add
 The default tolerance is $1%$, so given a target power of $80%$, we stop when we find a MDES that gives an estimated power between $79%$ and $81%$.
 In practice, due to the monotonic nature of the logistic functional form, our algorithm generally converges fairly rapidly.
 
-## Package Validation
+\subsection{Package Validation}
 
 We completed extensive validation checks to ensure our power calculation procedures are correct.
 First, we compared our power estimates in scenarios with only one outcome, $M = 1$, to those from the PowerUpR! package.
 Without a multiple testing procedure adjustment, our estimates match.
-Second, in order to validate our estimates under multiplicity, we followed the full simulation approach outlined above, in section TODO.
+Second, in order to validate our estimates under multiplicity, we followed the full simulation approach outlined above, in Section~\ref{sec:est_power}.
 The simulation approach involves generating many iterations of full datasets according to the assumed design and model, calculating $p$-values, and calculating an empirical estimate of power.
 Using a binomial distribution we constructed Monte Carlo confidence intervals for the power estimates from the full simulation approach.
 Then, we validated that the PUMP estimates fall within these confidence intervals.
 
-A more detailed explanation of the validation procedure can be found in the Appendix, and full validation code and results are in our github repository TODO.
+A more detailed explanation of the validation procedure can be found in the Appendix, and full validation code and results are in our github repository [pump_validate](https://github.com/MDRCNY/pump_validate).
 For some scenarios, we have some apparent discrepancies from PowerUp resulting from different modeling choices.
 For example, for certain models PowerUp assumes the intraclass correlation is zero, while we allow for nonzero values.
 When there are discrepancies, these are noted in the appendix.
 
-# 4. The PUMP Package
+\section{The PUMP package}
 
 In this section, we illustrate how to use the PUMP package, using our example motivated by the Diplomas Now study. Given the study’s design, we ask a natural initial question: What size of impact could we reasonably detect after using an MTP to adjust $p$-values to account for our multiple outcomes?
 
@@ -630,7 +657,7 @@ Once we have established initial values for all needed parameters, we first cond
 If the information were avilable, we could different values for the design parameters such as the $R^2$s and $ICC$s for each outcome, if we thought they had different characteristics; for simplicity we do not do this here.
 The `PUMP` package also allows specifying different pairwise correlations between the test statistics of the different outcomes via a matrix of $\rho$s rather than a single $\rho$; also for simplicity, we do not do that here.
 
-## Calculating MDES
+\subsection{Calculating MDES}
 
 We now have an initial planned design, with a set number of schools and students.
 But is this a large enough experiment to reliably detect reasonably sized effects?
@@ -696,7 +723,7 @@ The MDES goes up, as expected.
 
 
 
-## Determining necessary sample size
+\subsection{Determining necessary sample size}
 
 The MDES calculator tells us what we can detect given a specific design.
 We might instead want to ask how much larger our design would need to be in order to achieve a desired MDES.
@@ -752,11 +779,11 @@ We can look at a power curve to assess how sensitive power is to our level two s
 plot_power_curve( smp )
 ```
 
-## Comparing alternate approaches
+\subsection{Comparing alternate approaches}
 
 The package works with a range of multiple testing procedures and a range of modeling options. In the next two sections we show how to compare these within a given experimental design.
 
-### Comparing adjustment procedures
+\subsubsection{Comparing adjustment procedures}
 
 It is easy to rerun the above using the Westfall-Young Stepdown procedure (this procedure is much more computationally intensive to run), or other procedures of interest.
 Alternatively, simply provide a list of procedures you wish to compare.
@@ -774,7 +801,7 @@ Accounting for the correlation of the test statistics when adjusting $p$-values 
 See @Porter2018*CITE porter* for further discussion; while the paper Porter (2017) focuses on the multisite randomized trial context, the lessons learned there apply to all designs as the only substantive differences between different design and modeling choices is in how we calculate the unadjusted distribution of their test statistics.
 
 
-### Comparing modeling choices
+\subsubsection{Comparing modeling choices}
 
 There are usually a range of modeling choices one might bring to a given experimental design.
 For example, for multisite experiments ("d2.1" designs), Miratrix et al. (*CITE Miratrix and Weiss*) identify 15 different estimation strategies.
@@ -792,7 +819,7 @@ print( p3 )
 ```
 
 
-## Exploring sensitivity to design parameters
+\subsection{Exploring sensitivity to design parameters}
 
 Given the above, we might wonder how power shifts if we change our design parameters.
 For some discussion of what parameters will affect power more generally, see @RN4473.
@@ -810,7 +837,7 @@ We first illustrate the `update()` approach, and then turn to illustrating `grid
 The last two are particularly important for multiple outcome contexts.
 
 
-### Exploring power with update()
+\subsubsection{Exploring power with update()}
 
 Update allows for a quick change of some of the set of parameters used in a prior call; we saw `update()` used several times above.
 As a further example, here we examine what happens if the ICCs are more equally split across levels two and three:
@@ -842,7 +869,7 @@ summary(p_d)
 
 Using update allows for targeted comparison of major choices, but if we are interested in how power changes across a range of options, we can do this more systematically with the `grid()` functions, as we do next.
 
-### Exploring the impact of the ICC
+\subsubsection{Exploring the impact of the ICC}
 
 We above saw that the ICC does impact power considerably.
 We next extend this evaluation by exploring a range of options for both level two and three ICCs, so we can assess whether our power is sufficient across a set of plausible values.
@@ -883,7 +910,7 @@ This is to keep package syntax simpler.
 When faced with contexts where it is believed that these parameters do vary, we recommend using average values for the broader searches, and then double-checking a small set of potential final designs with the `pump_power()` method.
 
 
-### Exploring the impact of rho
+\subsubsection{Exploring the impact of rho}
 
 The correlation of test statistics, $\rho$, is a critical parameter for how power will play out across the multiple tests.
 For example, with Westfall-Young, we saw that the correlation can improve our individual power, as compared to Bonferroni.
@@ -918,7 +945,7 @@ Third, across a very broad range of rho, we maintain good min-1 power.
 Complete power climbs as correlation increases, and min-2 power is generally unchanged.
 
 
-### Exploring the impact of null outcomes
+\subsubsection{Exploring the impact of null outcomes}
 
 We finally explore varying the number of outcomes with no effects.
 This exploration is an important way to hedge a design against the possibility that some number of the identified outcomes are measured poorly, or are simply not impacted by treatment.
@@ -949,7 +976,7 @@ In particular, the `pump_power()` and `pump_sample()` methods allow the research
 The `grid()` functions, by contrast, take a single MDES value for the non-null outcomes, with a separate specification of how many of the outcomes are 0.
 (This single value plus `numZero` parameter also works with `pump_power()` if desired.)
 
-# 6. Conclusion
+\section{Conclusion}
 
 We introduce the power under multiplicity project (PUMP) package, which estimates power for multi-level randomized control trials with multiple outcomes.
 PUMP allows users to estimate power, MDES, and sample size requirements for a wide variety of commonly used RCT designs and models across different definitions of power and applying different MTPs.
@@ -960,4 +987,207 @@ However, one of the additional strengths of the package is the ease with which a
 Even if a user is only interested in a single outcome, PUMP provides useful functionality for more robust power calculations.
 A user can and should try a range of parameter values to determine the sensitivity of the power of their study to different assumptions; this package simplifies that process.
 
-# References
+\section{References}
+
+<div id="refs"></div>
+
+\section{Appendix: Validation}
+
+This appendix discusses our work to validate that the power estimation methods work as intended.
+
+We compare three different methods of estimating power:
+  
+* PUMP
+* PowerUpR (only comparable for D1individual, unadjusted power)
+* Monte Carlo Simulations
+
+We compare point estimates of power from PUMP and PowerUpR for D1 individual, unadjusted power estimates.
+For all other types of power definitions and adjustments, we are only able to compare PUMP to the estimated power from Monte Carlo simulations.
+The simulations produce a 95\% confidence interval for power, and we check that the PUMP estimate is within the confidence interval.
+
+## Monte Carlo Simulations
+
+The main work of this validation step was to design monte carlo simulations in order to estimate power.
+In order to estimate power by simulation, we follow the following steps.
+
+For iteration $s = 1, \dots S$:
+  
+1. Generate simulated data according to the assumed data generating process (DGP)
+2. Generate simulated treatment assignment
+3. Calculate p-value given simulated data, treatment assignment, and assumed model
+
+At the end, a 95\% confidence interval for power is calculated, assuming a conservative standard error estimate of $\sqrt{0.25/S}$.
+
+We also validate MDES and sample size calculations.
+For MDES, we choose one default scenario for each design and model, then input the already-calculated D1 individual power and see if the output MDES is the same as the original input MDES.
+Similarly, for sample size validation, we input the already-calculated D1 individual power and see if the output sample size (either $J$ or $K$ depending on design) is the same as the original sample size.
+
+## Simulation parameters
+
+In order to validate that the method works in a wide range of scenarios, which vary the following parameters.
+
+Parameters that vary:
+  
+  | Parameter               | Default                | Comparison values |
+  ---                       | ---                    | ---
+  | school size $\bar{n}$   | 50                     | 75, 100           |
+  | $R^2$                   | 0                      | 0.6               |
+  | $\rho$                  | 0.5                    | 0.2, 0.8          |
+  | ATE (ES) true positives | (0.125, 0.125, 0.125)  | (0.125, 0, 0)     |
+  | ICC                     | 0.2                    | 0.7               |
+  | $\omega$                | 0.1                    | 0.8               |
+  
+We do not vary:
+
+* $M = 3$
+* $J$ and $K$ are fixed for each scenario
+* Scalar grand mean $\Xi_0$
+* Correlations between school random effects and impacts $\kappa$
+* $\rho$ informs all correlations; we keep the same correlation between covariates, residuals, impacts, random effects for all levels and across all outcomes
+
+# Validation results
+
+Below is an example of a graph we use for validation.
+The red dot is the PUM estimate of power, the green dot is the PowerUpR estimate of power, and the 95% confidence intervals based on the monte carlo simulations are shown in blue.
+To validate that PUMP produces the expected result, we want to see the red and green points match, and for the red point to be within the blue intervals.
+The plot shows the results across different types of power and different MTPs.
+We repeat this graph for each set of parameters for each design.
+
+
+```{r}
+sim.params.list <- list(
+  S = 100                   # Number of samples for Monte Carlo Simulation
+  , Q = 10                  # Number of times entire simulation is repeated, so total iterations = S * Q
+  , B = NULL                # Number of samples for WestFall-Young. The equivalent is snum in our new method.
+  , alpha = 0.05            # Significance level
+  , tol = 0.01              # tolerance for MDES and sample  size calculations
+  , Tbar = 0.5              # Binomial assignment probability
+  , tnum = 10000            # Number of test statistics (samples) for all procedures other than Westfall-Young
+  , parallel = TRUE         # parallelize within each monte carlo iteration
+  , ncl = 3                 # Number of computer clusters (max on RStudio Server is 16)
+  , start.tnum = 2000       # number of iterations for starting to testing mdes and power
+  , final.tnum = 100000     # final number of iterations to check power
+  , max.steps = 20          # maximum number of iterations for MDES or sample size calculations
+  , max.cum.tnum = 10000000 # maximum cumulative tnum for MDES and sample size
+  , procs = c("Bonferroni", "BH", "Holm")
+  , runSim = TRUE           # If TRUE, we will re-run the simulation. If FALSE, we will pull previous run result.
+  , runPump = TRUE          # If TRUE, we will run method from our package. If FALSE, we will pull previous run result.
+  , runPowerUp = TRUE       # If TRUE, we will run method from powerup. If FALSE, we will pull previous run result.
+)
+
+M <- 3
+rho.default <- 0.5
+default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
+
+user.params.list <- list(
+  M = 3                                   # number of outcomes
+  , J = 60                                # number of schools
+  , K = 1                                 # number of districts (for two-level model, set K = 1)
+  , nbar = 50                             # number of individuals per school
+  , rho.default = rho.default             # default rho value (optional)
+  , S.id = NULL                           # N-length vector of indiv school assignments (optional)
+  , D.id = NULL                           # N-length vector of indiv district assignments (optional)
+  ################################################## grand mean otucome and impact
+  , Xi0 = 0                               # scalar grand mean outcome under no treatment
+  , ATE_ES = rep(0.125, M)                # minimum detectable effect size      
+  ################################################## level 3: districts
+  , R2.3 = rep(0.1, M)                    # percent of district variation explained by district covariates
+  , rho.V = default.rho.matrix            # MxM correlation matrix of district covariates
+  , ICC.3 = rep(0.2, M)                   # district intraclass correlation
+  , omega.3 = 0.1                         # ratio of district effect size variability to random effects variability
+  , rho.w0 = default.rho.matrix           # MxM matrix of correlations for district random effects
+  , rho.w1 = default.rho.matrix           # MxM matrix of correlations for district impacts
+  , theta.w = matrix(0, M, M)             # MxM matrix of correlations between district random effects and impacts
+  ################################################## level 2: schools
+  , R2.2 = rep(0.1, M)                    # percent of school variation explained by school covariates
+  , rho.X = default.rho.matrix            # MxM correlation matrix of school covariates
+  , ICC.2 = rep(0.2, M)                   # school intraclass correlation	
+  , omega.2 = 0.1                         # ratio of school effect size variability to random effects variability
+  , rho.u0 = default.rho.matrix           # MxM matrix of correlations for school random effects
+  , rho.u1 = default.rho.matrix           # MxM matrix of correlations for school impacts
+  , theta.u = matrix(0, M, M)             # MxM matrix of correlations between school random effects and impacts
+  ################################################## level 1: individuals
+  , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
+  , rho.C = default.rho.matrix            # MxM correlation matrix of individual covariates
+  , rho.r = default.rho.matrix            # MxM matrix of correlations for individual residuals 
+)
+
+user.params.list[['omega.2']] <- 0
+user.params.list[['J']] <- 30
+user.params.list[['K']] <- 10
+user.params.list[['nbar']] <- 50
+sim.params.list[['S']] <- 1000
+sim.params.list[['Q']] <- 1
+user.params.list[['nbar']] <- 100
+```
+
+
+**TODO** include plot
+
+```{r validate.power, fig.height=6, fig.width=6}
+# design <- "d3.2_m3ff2rc"
+# user.params.list[['R2.3']] <- rep(0, M)
+# params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+# power_plot <- gen.power.results.plot(params.file.base, design)
+# print(power_plot)
+```
+
+Next, we validate MDES and sample size calculations.
+The first column shows the calculated MDES or sample size, the middle column is the power we plugged into the calculation, and the last column shows the MDES or sample size that we are targeting.
+Thus, ideally we want the first and last columns to match.
+
+**TODO** include tables
+```{r}
+# user.params.list[['nbar']] <- 50
+# params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+# mdes.file <- find_file(params.file.base, type = 'mdes_D1indiv')
+# mdes_D1_results <- readRDS(mdes.file)
+# pander::pandoc.table(
+#   mdes_D1_results,
+#   style = "grid", split.tables = 100, row.names = FALSE,
+#   caption = design
+# )
+```
+
+
+```{r}
+# sample.file <- find_file(params.file.base, type = 'sample_D1indiv')
+# sample_D1_results <- readRDS(sample.file)
+# pander::pandoc.table(
+#   sample_D1_results,
+#   style = "grid", split.tables = 100, row.names = FALSE,
+#   caption = design
+# )
+```
+
+## Westfall-Young procedures
+
+The Westfall-Young procedure was validated separately due to its unique complications and computational burden.
+
+First, we wrote a series of careful unit tests ensuring that our code worked as expected for each step of the WY procedure. One of these tests compared results from our procedure to the WY procedure in the multtest package, and found it matched quite well.
+
+Second, we also tested the WY procedures using the same simulation procedure described above.
+For constant effect and fixed effect models, the power estimation matches between PUM and the simulations.
+However, for random effects models, the two methods diverge in some cases.
+We find that the simulated power matches the PUMP-calculated power only when (1) there is a large number of blocks/clusters, and (2) the user has a large number of WY permutations.
+Below, we discuss the single-step procedure because it is simpler, although the same concepts hold for the step-down procedure.
+Although it is difficult to verify why this discrepancy occurs, our hypothesis is that this behavior occurs due to the combination of the sensitivity of the WY procedure, and the instability of the random effects model.
+
+The goal of the WY procedure is to estimate the adjusted p-value for outcome $i$
+$$\tilde{p}_i = Pr\left(\min_{1 \leq j \leq k} P_j \leq p_i \mid H_0^C\right).$$
+where $P_j$ is a random variable representing a $p$-value for outcome $j$, and lowercase $p_i$ is the observed realization for outcome $i$.
+We assume a set of $k$ tests with corresponding null hypotheses $H_{0i}$ for $i = 1, \cdots, k$.
+The complete null hypothesis is the setting where all the null hypotheses are true: $H_0^C = \cap_{i=1}^{k} H_{0i} = \{\text{all } H_i \text{are true}\}$.
+In order to estimate this p-value, the p-value is calculated across $B$ permutations
+$$\tilde{p}_i = \frac{1}{B}\sum_{b = 1}^{B} \mathbb{1}(\min_{1 \leq j \leq k} p_{b,j}^\star \leq p_i).$$
+
+In order for the procedure to be correct, we should be generating the p-values $P_j$ from the the true distribution of p-values under the null hypothesis.
+We generally are testing outcomes that are truly significant, so the observed p-values are small.
+Thus, looking at these expressions, we are concerned about tail behavior; we are testing whether a small observed p-value is less than the minimum of of the generated p-values of our multiple outcomes.
+This combination of factors means that a small discrepancy in the tails between the generated null distribution and the true distribution could have a large impact on the adjusted p-value.
+
+Given that we are relying on tail behavior, this explains why we need both a large number of permutations, and a large number of blocks/clusters.
+The large number of permutations is required because we are trying to estimate a rare event.
+With a significant outcome, it is rare that the observed p-value will be less than the minimum of p-values generated from the null distribution.
+The large number of blocks/clusters is required to accurately estimate the tail behavior for random effects models.
+With a small number of blocks/clusters, we may not properly estimate the spread of the distribution, resulting in a poor estimate of the tail behavior.
