--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -1,46 +1,54 @@
 
-Updated: Dec 21 by KH
+Updated: Dec 22 by KH
 
 # R package
 
-- Silence ROxygen documentation for non-exported functions
+- Silence ROxygen documentation for non-exported functions (?)
 - double check Min powers returned when numZero >0 (or help KP finally have clarity)
 
 # Manuscript
 
 - finalize a title (TBD)
-- add plots to vignette (waiting on LM fix)
-- add appendices to main document (KH)
 - check if JSS allows vignette to be published separately (KH)
-- once manuscript is ready, move vignette out into package (KH or LM)
 - write abstract (KH or KP)
-- prepare for submission (KH)
+- prepare formatting for submission (KH)
 - discussion of Benjamini-Hochberg (TBD)
-  
+
+*Waiting*
+
+- add plots to vignette (waiting on LM fix)
+- add appendices to main document (waiting on validation to finish KH)
+- once manuscript is ready, move vignette ijnto package (KH or LM)
+
 # Package updates
 
-- send out for user testing (KH)
-- error messaging (KH or LM)
-  - collect errors from grid and only print out unique errors
-  - better error messaging for flat power curves (both shiny and non-shiny)
-  - error if user passes same parameter in twice into grid
+*High priority*
+
+- recruit people for user testing?
+
+*Medium priority*
+
 - write simulation correlation tool (KH)
+
+*Low priority*
+
 - functions to convert between long and wide (LM)
 - plotting code (LM)
+  - fix broken plots for grid function
   - clean up and condense data wrangling
   - add new plots for single scenario for mdes, sample size
   - make plots prettier
-- allow for MDES to have zeros in middle, not just the end (KH)
-- for single outcome, remove min1 and complete columns from printout (KH)
+- error/other messaging (KH or LM)
+  - collect errors from grid and only print out unique errors
+  - better error messaging for flat power curves (both shiny and non-shiny)
+  - error if user passes same parameter in twice into grid
+  - give user estimate of runtime for WY (MDES and SS will require extra work)
 
 # Validation
 
 - rerun all validation (KH, in progress)
 - render validation documents (KH)
-- comprehensive review of WY behavior (KH)
-  - scenarios from KP
-  - default parameter values for B for power, mdes, ss
-  - give user estimate of runtime
+- incorporate into appendix (KH)
   
 # Waiting
 
